--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="cordova_plugins.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
 <script type="text/javascript" src="http://pc.pulipuli.info/phonegap-build-projects/PhoneGapBuild-BlockURL/test/test_script.js"></script>
